# cold-widow

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  build  cold-widow.cabal  stack.yaml
cold-widow/: Main.hs
compact-decode/: Main.hs
console-program-0.4.1.0/: CHANGELOG.md
console-program-0.4.1.0/Examples/: Full.hs  Simple.hs
console-program-0.4.1.0/src/System/Console/: Argument.hs  Command.hs  ConfigFile.hs  Internal.hs  Program.hs
decode/: Main.hs
encode/: Main.hs
extract/: Main.hs  extract.c
generate/: Main.hs
lib/Codec/Binary/: Coldwidow.hs
tests/: Spec.hs
tests/Codec/Binary/: ColdwidowSpec.hs
