name:                cold-widow
version:             0.2.0
synopsis:            File transfer via QR Codes.
description:         Utilities and Haskell library to transfer files via qr-codes.
homepage:            https://github.com/mihaigiurgeanu/cold-widow#readme
license:             BSD3
license-file:        LICENSE
author:              Mihai Giurgeanu
maintainer:          mihai.giurgeau@gmail.com
copyright:           2016 Mihai Giurgeanu
category:            Utility
build-type:          Simple
cabal-version:       >=1.10
extra-doc-files:     README.md

library
  hs-source-dirs:       lib
  exposed-modules:      Codec.Binary.Coldwidow
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5,
                        bytestring,
                        qrcode >= 0.1.2 && < 0.2


Executable cold-widow
  hs-source-dirs:      cold-widow
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       console-program >= 0.4.2.3 && < 0.5,
                       transformers >= 0.5 && < 0.6,
                       directory >= 1.2,
                       containers >= 0.5

executable encode45
  hs-source-dirs:       encode
  main-is:              Main.hs
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5,
                        bytestring,
                        cold-widow

executable decode45
  hs-source-dirs:       decode
  main-is:              Main.hs
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5,
                        bytestring,
                        cold-widow

executable compact-decode45
  hs-source-dirs:       compact-decode
  main-is:              Main.hs
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5,
                        bytestring

executable read-qr
  hs-source-dirs:       extract
  main-is:              Main.hs
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5,
                        transformers >= 0.5 && < 0.6,
                        JuicyPixels >=3.3.7 && <3.4
  extra-libraries:      quirc
  c-sources:            extract/extract.c
  include-dirs:         quirc/lib

executable write-qr
  hs-source-dirs:       generate
  main-is:              Main.hs
  default-language:     Haskell2010
  build-depends:        base >=4.7 && <5,
                        qrcode >=0.1.2 && <0.2,
                        JuicyPixels >=3.3 && <3.4,
                        array >=0.5 && <0.6,
                        cold-widow

Test-Suite cold-widow-tests
  hs-source-dirs:       tests
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  default-language:     Haskell2010
  other-modules:        Codec.Binary.ColdwidowSpec
  build-depends:        base >= 4.7 && < 5,
                        hspec,
                        bytestring,
                        cold-widow
