name:                cold-widow
version:             0.2.0
synopsis:            File transfer via QR Codes.
description:         Utilities and Haskell library to transfer files via qr-codes.
homepage:            https://github.com/mihaigiurgeanu/cold-widow#readme
license:             BSD3
license-file:        LICENSE
author:              Mihai Giurgeanu
maintainer:          mihai.giurgeau@gmail.com
copyright:           2016 Mihai Giurgeanu
category:            Utility
build-type:          Simple
cabal-version:       >=1.10
extra-doc-files:     README.md

library
  hs-source-dirs:       lib
  exposed-modules:      Codec.Binary.Coldwidow
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5,
                        bytestring,
                        qrcode >= 0.1.2 && < 0.2

executable encode45
  hs-source-dirs:       encode
  main-is:              Main.hs
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5,
                        bytestring,
                        cold-widow

executable decode45
  hs-source-dirs:       decode
  main-is:              Main.hs
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5,
                        bytestring,
                        cold-widow

executable make-qr
  hs-source-dirs:       generate
  main-is:              Main.hs
  default-language:     Haskell2010
  build-depends:        base >=4.7 && <5,
                        qrcode >=0.1.2 && <0.2,
                        pgm >= 0.1.4 && < 1,
                        array >=0.5 && <0.6,
                        cold-widow
